smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/invalid-unquoted-shape-id.smithy
// Syntax error at line 3, column 19: Expected IDENTIFIER but found POUND('#') | Model

metadata abc = aa$#

namespace foo.baz
